# rumps

./: .gitignore  .gitmodules  Taskfile.yaml  environment.yml  pyproject.toml  setup.py
examples/: example_preferences.py
rumps/: __init__.py  compat.py  events.py  notifications.py  rumps.py  utils.py  version.py
