[tool.poetry]
name = "rumps"
version = "0.1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pyobjc = "^8.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
